--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="action_rate">Rate app</string>
     <string name="action_restore">Restore</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
     <string name="action_share">Share app</string>
     <string name="action_support">Feedback</string>
     <string name="action_tour">Take a tour</string>
